--- a/MD2017_firmware/.cproject
+++ b/MD2017_firmware/.cproject
@@ -102,7 +102,7 @@
 							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags.287839684" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags" valueType="stringList">
 								<listOptionValue builtIn="false" value="-Wno-format"/>
 								<listOptionValue builtIn="false" value="-Wno-format-truncation"/>
-								<listOptionValue builtIn="false" value="-DGITVERSION=`git rev-parse --short HEAD || echo UNKNOWN`"/>
+								<listOptionValue builtIn="false" value="-DGITVERSION=`git rev-parse --short HEAD || echo RUSSIAN`"/>
 							</option>
 							<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.871893021" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 						</tool>
@@ -112,7 +112,7 @@
 							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags.1868055429" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags" valueType="stringList">
 								<listOptionValue builtIn="false" value="-Wno-format"/>
 								<listOptionValue builtIn="false" value="-Wno-format-truncation"/>
-								<listOptionValue builtIn="false" value="-DGITVERSION=`git rev-parse --short HEAD || echo UNKNOWN`"/>
+								<listOptionValue builtIn="false" value="-DGITVERSION=`git rev-parse --short HEAD || echo RUSSIAN`"/>
 							</option>
 							<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1616924110" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 						</tool>
@@ -128,7 +128,7 @@
 							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags.1514217180" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags" valueType="stringList">
 								<listOptionValue builtIn="false" value="-Wno-format"/>
 								<listOptionValue builtIn="false" value="-Wno-format-truncation"/>
-								<listOptionValue builtIn="false" value="-DGITVERSION=`git rev-parse --short HEAD || echo UNKNOWN`"/>
+								<listOptionValue builtIn="false" value="-DGITVERSION=`git rev-parse --short HEAD || echo RUSSIAN`"/>
 							</option>
 							<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.580930965" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 						</tool>
